--- a/Giga/Giga.vcxproj.filters
+++ b/Giga/Giga.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="src\Giga.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Giga\EntryPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Giga\Application.cpp">
